# FatalErrorGames

./: .gitignore  Pipfile  Procfile  manage.py  pyproject.toml
feg/: asgi.py  settings.py  urls.py  wsgi.py
functional_tests/: base.py  test_games.py  test_persons.py
games/: admin.py  apps.py  context_processors.py  forms.py  models.py  services.py  tests.py  urls.py  views.py
games/migrations/: 0001_initial.py  0002_auto_20201015_1310.py  0002_auto_20201119_0032.py  0003_auto_20201015_1417.py  0003_auto_20201119_0157.py  0004_auto_20201015_1418.py
games/tests/: test_models.py  test_services.py  test_views.py
langs/: admin.py  context_processors.py  models.py  services.py  tests.py  views.py
langs/migrations/: 0001_initial.py  0002_auto_20201119_0032.py  0003_auto_20201119_0035.py
langs/tests/: test_services.py  test_views.py
locale/ru/LC_MESSAGES/: django.mo  django.po
pages/: tests.py  urls.py  views.py
persons/: admin.py  apps.py  models.py  services.py  tests.py  urls.py  views.py
persons/migrations/: 0001_initial.py
persons/tests/: test_models.py  test_services.py  test_views.py
services/: __init__.py  base.py  common.py  strategies.py
static/css/: main.css
static/owlcarousel/: owl.carousel.css
templates/: 404.html  500.html  base.html  cooperation.html  error.html  game.html  languages.html  news.html  person.html  project.html
utils/: logs.py  models.py  settings.py  urls.py  views.py
